--- a/android-application/app/src/main/res/layout/toolbar.xml
+++ b/android-application/app/src/main/res/layout/toolbar.xml
@@ -1,45 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/toolbar"
+    android:id="@+id/toolbarLayout"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="?attr/colorPrimaryDark"
-    android:minHeight="?attr/actionBarSize">
+    android:layout_height="wrap_content">
 
-    <LinearLayout
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:background="?attr/colorPrimaryDark"
+        android:minHeight="?attr/actionBarSize"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
-        <TextView
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="sans-serif-medium"
-            android:paddingBottom="@dimen/toolbar_padding_bottom"
-            android:text="@string/common_title"
-            android:textColor="@color/toolbar_title_color"
-            android:textSize="@dimen/toolbar_title_text_size"
-            tools:ignore="RtlSymmetry" />
+            android:orientation="horizontal">
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
-            android:contentDescription="@null"
-            android:paddingLeft="@dimen/toolbar_padding_for_status"
-            android:paddingRight="@dimen/toolbar_padding_for_status"
-            android:src="@drawable/status" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="sans-serif-medium"
+                android:paddingBottom="@dimen/toolbar_padding_bottom"
+                android:text="@string/common_title"
+                android:textColor="@color/toolbar_title_color"
+                android:textSize="@dimen/toolbar_title_text_size"
+                tools:ignore="RtlSymmetry" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="sans-serif-regular"
-            android:paddingBottom="@dimen/toolbar_padding_bottom"
-            android:text="@string/common_status_online"
-            android:textColor="@color/toolbar_status_color"
-            android:textSize="@dimen/toolbar_status_text_size"
-            tools:ignore="RtlSymmetry" />
-    </LinearLayout>
-</android.support.v7.widget.Toolbar>
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom"
+                android:contentDescription="@null"
+                android:paddingLeft="@dimen/toolbar_padding_for_status"
+                android:paddingRight="@dimen/toolbar_padding_for_status"
+                android:src="@drawable/status" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="sans-serif-regular"
+                android:paddingBottom="@dimen/toolbar_padding_bottom"
+                android:text="@string/common_status_online"
+                android:textColor="@color/toolbar_status_color"
+                android:textSize="@dimen/toolbar_status_text_size"
+                tools:ignore="RtlSymmetry" />
+        </LinearLayout>
+    </android.support.v7.widget.Toolbar>
+</android.support.constraint.ConstraintLayout>
