--- a/android-application/app/src/main/res/values/dimens.xml
+++ b/android-application/app/src/main/res/values/dimens.xml
@@ -6,6 +6,7 @@
     <dimen name="toolbar_status_text_size">12sp</dimen>
     <dimen name="toolbar_padding_bottom">2dp</dimen>
     <dimen name="toolbar_padding_for_status">5dp</dimen>
+    <dimen name="navigation_width">70dp</dimen>
 
     <!--OpenWalletActivity-->
     <dimen name="open_wallet_password_margin">32dp</dimen>
@@ -13,7 +14,17 @@
     <dimen name="open_wallet_title_margin">50dp</dimen>
     <dimen name="open_wallet_title_text_size">32sp</dimen>
 
-    <!--MainActivity-->
-    <dimen name="main_card_title_text_size">16sp</dimen>
-    <dimen name="main_card_corner_radius">10dp</dimen>
+    <!--WalletActivity-->
+    <dimen name="wallet_card_title_text_size">18sp</dimen>
+    <dimen name="wallet_card_corner_radius">10dp</dimen>
+    <dimen name="transaction_item_padding">13dp</dimen>
+    <dimen name="transaction_icon_padding_end">25dp</dimen>
+    <dimen name="transaction_sender_text_size">16sp</dimen>
+    <dimen name="transaction_data_text_size">12sp</dimen>
+    <dimen name="transaction_sum_text_size">15sp</dimen>
+    <dimen name="transaction_status_text_size">11sp</dimen>
+
+    <!--UtxoActivity-->
+    <dimen name="utxo_card_title_text_size">16sp</dimen>
+    <dimen name="utxo_card_corner_radius">10dp</dimen>
 </resources>
