--- a/android-application/app/src/main/res/layout/item_transaction.xml
+++ b/android-application/app/src/main/res/layout/item_transaction.xml
@@ -22,7 +22,6 @@
         tools:ignore="RtlSymmetry" />
 
     <TextView
-        app:layout_constraintVertical_chainStyle="packed"
         android:id="@+id/message"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -30,11 +29,12 @@
         android:gravity="start"
         android:textColor="@color/transaction_sender_color"
         android:textSize="@dimen/transaction_sender_text_size"
-        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="@id/date"
         app:layout_constraintEnd_toStartOf="@id/barrier"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@id/icon" />
+        app:layout_constraintStart_toEndOf="@id/icon"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_chainStyle="packed" />
 
     <TextView
         android:id="@+id/date"
@@ -64,10 +64,21 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="sans-serif"
+        android:paddingStart="@dimen/wallet_currency_padding"
+        android:paddingEnd="@dimen/wallet_currency_padding"
         android:textSize="@dimen/transaction_sum_text_size"
         app:layout_constraintBottom_toTopOf="@id/status"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/currency"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:paddingTop="@dimen/wallet_available_text_icon_padding_top"
+        android:id="@+id/currency"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:contentDescription="@null"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@id/sum" />
 
     <TextView
         android:id="@+id/status"
