--- a/android-application/app/src/main/res/layout/toolbar.xml
+++ b/android-application/app/src/main/res/layout/toolbar.xml
@@ -14,13 +14,14 @@
         android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:fontFamily="sans-serif-medium"
                 android:paddingBottom="@dimen/toolbar_padding_bottom"
                 android:text="@string/common_title"
@@ -41,6 +42,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="sans-serif-regular"
+                android:paddingEnd="@dimen/toolbar_padding_end"
                 android:paddingBottom="@dimen/toolbar_padding_bottom"
                 android:text="@string/common_status_online"
                 android:textColor="@color/toolbar_status_color"
