--- a/android-application/app/src/main/res/values/dimens.xml
+++ b/android-application/app/src/main/res/values/dimens.xml
@@ -5,8 +5,9 @@
     <dimen name="toolbar_title_text_size">18sp</dimen>
     <dimen name="toolbar_status_text_size">12sp</dimen>
     <dimen name="toolbar_padding_bottom">2dp</dimen>
+    <dimen name="toolbar_padding_end">30dp</dimen>
     <dimen name="toolbar_padding_for_status">5dp</dimen>
-    <dimen name="navigation_width">70dp</dimen>
+    <dimen name="navigation_width">304dp</dimen>
 
     <!--OpenWalletActivity-->
     <dimen name="open_wallet_password_margin">32dp</dimen>
@@ -16,13 +17,29 @@
 
     <!--WalletFragment-->
     <dimen name="wallet_card_title_text_size">18sp</dimen>
+    <dimen name="wallet_card_padding">20dp</dimen>
     <dimen name="wallet_card_corner_radius">10dp</dimen>
-    <dimen name="wallet_available_text_size">46sp</dimen>
+    <dimen name="wallet_available_text_size">24sp</dimen>
+    <dimen name="wallet_available_text_padding_start">12dp</dimen>
+    <dimen name="wallet_available_text_padding_end">3dp</dimen>
+    <dimen name="wallet_available_sum_margin_top">10dp</dimen>
+    <dimen name="wallet_available_text_icon_size">20dp</dimen>
+    <dimen name="wallet_available_text_icon_padding_top">2dp</dimen>
+    <dimen name="wallet_currency_padding">3dp</dimen>
+    <dimen name="wallet_button_text_size">14sp</dimen>
+    <dimen name="wallet_button_width">155dp</dimen>
+    <dimen name="wallet_button_height">38dp</dimen>
+    <dimen name="wallet_button_margin_top">25dp</dimen>
+    <dimen name="wallet_button_items_padding">14dp</dimen>
+    <dimen name="wallet_available_margin_top">20dp</dimen>
+    <dimen name="wallet_in_progress_margin_top">9dp</dimen>
+    <dimen name="wallet_expandable_icon_padding">9dp</dimen>
+    <dimen name="wallet_expandable_icon_size">20dp</dimen>
     <dimen name="transaction_item_padding">13dp</dimen>
     <dimen name="transaction_icon_padding_end">25dp</dimen>
     <dimen name="transaction_sender_text_size">16sp</dimen>
     <dimen name="transaction_data_text_size">12sp</dimen>
-    <dimen name="transaction_sum_text_size">15sp</dimen>
+    <dimen name="transaction_sum_text_size">24sp</dimen>
     <dimen name="transaction_status_text_size">11sp</dimen>
     <dimen name="transactions_title_text_size">18sp</dimen>
     <dimen name="transactions_title_padding">10dp</dimen>
