--- a/android-application/app/src/main/res/values/styles.xml
+++ b/android-application/app/src/main/res/values/styles.xml
@@ -1,12 +1,17 @@
 <resources>
 
     <!-- Base application theme -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
+    <style name="AppTheme" parent="Theme.AppCompat.NoActionBar">
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
         <item name="android:windowBackground">@color/colorPrimaryDark</item>
         <item name="android:statusBarColor">@color/status_bar_color</item>
+    </style>
+
+    <style name="PopupMenu" parent="Theme.AppCompat.NoActionBar">
+        <item name="android:textColor">@color/toolbar_title_color</item>
+        <item name="android:itemBackground">@color/colorPrimary</item>
     </style>
 
     <!-- OpenWalletActivity -->
