--- a/android-application/app/src/main/res/layout/toolbar.xml
+++ b/android-application/app/src/main/res/layout/toolbar.xml
@@ -19,12 +19,12 @@
             android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/toolbarTitle"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:fontFamily="sans-serif-medium"
                 android:paddingBottom="@dimen/toolbar_padding_bottom"
-                android:text="@string/common_title"
                 android:textColor="@color/toolbar_title_color"
                 android:textSize="@dimen/toolbar_title_text_size"
                 tools:ignore="RtlSymmetry" />
