--- a/android-application/app/src/main/res/drawable/button_common.xml
+++ b/android-application/app/src/main/res/drawable/button_common.xml
@@ -3,13 +3,13 @@
     <item android:state_pressed="true">
         <shape android:shape="rectangle">
             <corners android:radius="50dp" />
-            <solid android:color="@color/received_color_picked" />
+            <solid android:color="@color/colorAccentPicked" />
         </shape>
     </item>
-    <item>
+    <item android:right="5dp" android:top="5dp">
         <shape android:shape="rectangle">
             <corners android:radius="50dp" />
-            <solid android:color="@color/received_color" />
+            <solid android:color="@color/colorAccent" />
         </shape>
     </item>
 </selector>
