--- a/android-application/app/src/main/res/values/colors.xml
+++ b/android-application/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="colorAccent">#00f6d2</color>
     <color name="colorAccentPicked">#01c4a7</color>
     <color name="common_text_color">#ffffff</color>
+    <color name="common_error_color">#ff625c</color>
     <color name="snack_bar_color">#0a4b66</color>
     <color name="status_bar_color">#33000000</color>
     <color name="toolbar_title_color">#ffffff</color>
@@ -15,6 +16,7 @@
     <color name="sent_color">#da68f5</color>
     <color name="sent_color_picked">#be5cd6</color>
     <color name="list_item_background">@color/colorPrimary</color>
+    <color name="logo_text_color">#49bcec</color>
     <color name="ic_menu_color">#80929D</color>
 
     <!--OpenWalletActivity-->
