--- a/android-application/app/src/main/res/values/styles.xml
+++ b/android-application/app/src/main/res/values/styles.xml
@@ -14,6 +14,35 @@
         <item name="android:itemBackground">@color/colorPrimary</item>
     </style>
 
+    <style name="common_button_text_style">
+        <item name="android:textSize">@dimen/wallet_button_text_size</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:paddingStart">@dimen/welcome_button_text_padding_start</item>
+        <item name="android:paddingTop">@dimen/welcome_button_text_padding_top</item>
+        <item name="android:paddingBottom">@dimen/welcome_button_text_padding_bottom</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="common_button_style">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginStart">@dimen/common_button_margin</item>
+        <item name="android:layout_marginEnd">@dimen/common_button_margin</item>
+    </style>
+
+    <!-- WelcomeActivity -->
+    <style name="welcome_description_text_style">
+        <item name="android:textColor">@color/common_text_color</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:fontFamily">sans-serif</item>
+        <item name="android:gravity">center_horizontal</item>
+        <item name="android:textSize">@dimen/welcome_description_text_size</item>
+    </style>
+
     <!-- OpenWalletActivity -->
     <style name="open_wallet_password_view_style">
         <item name="android:textColor">@color/password_text_color</item>
@@ -37,23 +66,6 @@
     </style>
 
     <!-- WalletFragment -->
-    <style name="wallet_button_text_style">
-        <item name="android:textColor">@color/wallet_button_text_color</item>
-        <item name="android:fontFamily">@font/wallet_btn_font</item>
-        <item name="android:textSize">@dimen/wallet_button_text_size</item>
-        <item name="android:textAllCaps">false</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_width">wrap_content</item>
-    </style>
-
-    <style name="wallet_button_layout_style">
-        <item name="android:layout_height">@dimen/wallet_button_height</item>
-        <item name="android:layout_width">@dimen/wallet_button_width</item>
-        <item name="android:layout_marginTop">@dimen/wallet_button_margin_top</item>
-        <item name="android:gravity">center</item>
-        <item name="android:orientation">horizontal</item>
-    </style>
-
     <style name="wallet_card_style">
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_width">match_parent</item>
