added custom alertDialog

--- a/android-application/app/src/main/res/layout/fragment_welcome_passwords.xml
+++ b/android-application/app/src/main/res/layout/fragment_welcome_passwords.xml
@@ -3,7 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:paddingStart="@dimen/welcome_passwords_padding"
+    android:paddingEnd="@dimen/welcome_passwords_padding">
 
     <TextView
         android:id="@+id/title"
@@ -11,6 +13,7 @@
         android:layout_height="wrap_content"
         android:fontFamily="sans-serif-medium"
         android:gravity="center_horizontal"
+        android:paddingTop="@dimen/welcome_passwords_title_padding_top"
         android:text="@string/welcome_title"
         android:textColor="@color/common_text_color"
         android:textSize="30sp"
@@ -22,8 +25,8 @@
     <TextView
         android:id="@+id/description"
         style="@style/welcome_description_text_style"
+        android:paddingTop="@dimen/welcome_passwords_description_padding_top"
         android:text="@string/welcome_passwords_description"
-        app:layout_constraintBottom_toTopOf="@id/passTitle"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/title" />
@@ -34,7 +37,8 @@
         android:layout_height="wrap_content"
         android:text="@string/welcome_pass_title"
         app:layout_constraintBottom_toTopOf="@id/pass"
-        app:layout_constraintTop_toBottomOf="@id/description" />
+        app:layout_constraintTop_toBottomOf="@id/description"
+        app:layout_constraintVertical_chainStyle="packed" />
 
     <EditText
         android:id="@+id/pass"
@@ -82,8 +86,10 @@
     <com.mw.beam.beamwallet.core.views.BeamButton
         android:id="@+id/btnProceed"
         style="@style/common_button_style"
+        android:layout_marginStart="@dimen/welcome_passwords_button_margin_start_end"
+        android:layout_marginEnd="@dimen/welcome_passwords_button_margin_start_end"
+        android:layout_marginBottom="@dimen/welcome_passwords_button_margin_bottom"
         app:button_text="@string/welcome_proceed_to_wallet"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/passMatchError" />
+        app:layout_constraintBottom_toBottomOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
