--- a/android-application/app/src/main/res/values/colors.xml
+++ b/android-application/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="common_text_color">#ffffff</color>
     <color name="common_error_color">#ff625c</color>
     <color name="snack_bar_color">#0a4b66</color>
+    <color name="alert_dialog_color">#0a4b66</color>
     <color name="status_bar_color">#33000000</color>
     <color name="toolbar_title_color">#ffffff</color>
     <color name="toolbar_status_color">#8da1ad</color>
